After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764853 - Unnecessary menubar when "Show Application Menu" is off
Unnecessary menubar when "Show Application Menu" is off
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
3.20.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-10 16:58 UTC by Remco
Modified: 2016-04-18 03:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Duplicate Application Menu (22.81 KB, image/png)
2016-04-10 16:58 UTC, Remco
Details

Description Remco 2016-04-10 16:58:13 UTC
Created attachment 325673 [details]
Duplicate Application Menu

If you turn off "Show Application Menu" in Tweak Tool's Top Bar settings, the Application Menu will not be shown in GNOME Shell's Top Bar anymore, but it will be shown in Builder's headerbar instead. This is expected behavior. However, it also adds a menubar below the headerbar, consisting solely of the "Builder" menu item. This is unnecessary.
Comment 1 Christian Hergert 2016-04-18 03:03:42 UTC
Interesting, apparently commit 1af9f5de8d3a5cd62bbe997ae40cf48c738f6e0a isn't sufficient then?
Comment 2 Christian Hergert 2016-04-18 03:27:23 UTC
Looks like it was construct param ordering causing the issue.

Fixed in commit 7411fa9f1c2f7fb80f0251cb2e438aab07426b09.