workbench: apply show-menu after GObject::constructed()

The construct param is getting set after our default value, so we need to
wait for constructed state to apply our override.

https://bugzilla.gnome.org/show_bug.cgi?id=764853